--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
 body { 
-    background: lightblue url("/images/akan.jpg") no-repeat fixed center;
+    background: url("/images/akan.jpg") no-repeat fixed center;
   }
 
