--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,7 @@ body {
     background: url("/images/akan.jpg") no-repeat fixed center;
   }
 
+h1, p {
+    font-size: 25px;
+    text-align: center;
+}
