adjust background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body { 
-    background: url("/images/akan.jpg") no-repeat fixed center;
+    background: url("../images/akan.jpg") no-repeat fixed center;
   }
 
 h1, p {
